Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46635

qdoc: Image files used as resources in examples not included in .qch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.1
    • 5.5.0 Beta
    • Build tools: qdoc
    • None
    • 8f3e7e3 (qtbase)

      Example documentation pages list the example's source files and image files, and link to them.

      When viewing the offline doc in Qt Creator or Assistant, the links to the image files result in 'file not found' error. The images are missing from the .qch package (and not listed in the .qhp).

        For Gerrit Dashboard: QTBUG-46635
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes